# noet-core

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  action_inference_engine.md  audit.toml  build.rs  cross_platform_architecture.md  procedure_engine.md  procedures.md  redline_system.md
.github/: README.md
.github/workflows/: test.yml
.scratchpad/: 2025-01-24-issue01-complete.md  2025-01-24-issue10-COMPLETE-summary.md  2025-01-24-issue10-step1-completion.md  2025-01-24-issue21-progress.md  2025-01-24-schema-extraction-session.md  FINAL_SESSION_SUMMARY.md  ISSUE_06_SESSION_PREP.md  ISSUE_40_COMPLETION.md  NEXT_SESSION_START_HERE.md  PHASE_0_TESTING_CHECKLIST.md  README.md  SESSION_4_COMPLETE.md  SESSION_7_COMPLETE.md  anchorpath_windows_drive_letter.md  issue34_theory1.md  issue34_unit_tests.md  issue_02_tdd_summary.md  issue_02_todo_status.md  issue_03_remaining_work.md  issue_03_tdd_complete.md  issue_03_todo_assertions_status.md  issue_04_implementation.md  issue_22_implementation_handoff.md  procedures_migration_plan.md  relations_rendering_debug.md  schema_operations_design.md  session_2025-01-26_issue02_complete.md  sitemap_spa_changes.md  step6_summary.md  step7_wasm_progress.md  ux_decisions_reference.md  wasm_threading_fix.md
assets/: .gitignore  default-theme.css  noet-layout.css  noet-theme-dark.css  noet-theme-light.css  package.json  template-responsive.html  template-simple.html  viewer.js
assets/fonts/: README.md  ibm-plex-sans.css
assets/viewer/: content.js  metadata.js  navigation.js  network-selector.js  panels.js  resize.js  routing.js  shard-manager.js  state.js  theme.js  utils.js  wasm.js
benches/: README.md  document_processing.rs  fetch_corpora.sh  macro_benchmarks.rs
benches/log_analysis/: README.md  parse_log.py
docs/: CI_CD_SETUP.md  README.md
docs/design/: action_observable_schema.md  architecture.md  beliefbase_architecture.md  beliefset_architecture.md  federated_belief_network.md  instrumentation_design.md  interactive_viewer.md  link_format.md  noet_procedures_readme.md  procedure_execution.md  procedure_schema.md  redline_system.md  search_and_sharding.md  section_metadata_manifest.md  smooth_iterative_deepening.md
docs/project/: BACKLOG.md  DOCUMENTATION_STRATEGY.md  ISSUE_01_SCHEMA_REGISTRY.md  ISSUE_02_MULTINODE_TOML_PARSING.md  ISSUE_03_HEADING_ANCHORS.md  ISSUE_04_LINK_MANIPULATION.md  ISSUE_05_DOCUMENTATION.md  ISSUE_06_CODE_QUALITY.md  ISSUE_06_HTML_GENERATION.md  ISSUE_07_COMPREHENSIVE_TESTING.md  ISSUE_08_REPOSITORY_SETUP.md  ISSUE_09_CRATES_IO_RELEASE.md  ISSUE_10_DAEMON_TESTING.md  ISSUE_11_BASIC_LSP.md  ISSUE_12_ADVANCED_LSP.md  ISSUE_13_HTML_CLI_INTEGRATION.md  ISSUE_14_NAMING_IMPROVEMENTS.md  ISSUE_15_FILTERED_EVENT_STREAMING.md  ISSUE_16_AUTOMERGE_INTEGRATION.md  ISSUE_17_NOET_PROCEDURES_EXTRACTION.md  ISSUE_18_EXTENDED_PROCEDURE_SCHEMAS.md  ISSUE_19_FILE_WATCHER_TIMING_BUG.md  ISSUE_22_DUPLICATE_NODE_DEDUPLICATION.md  ISSUE_23_INTEGRATION_TEST_CONVERGENCE.md  ISSUE_25_PER_NETWORK_THEMING.md  ISSUE_26_GIT_AWARE_NETWORKS.md  ISSUE_27_RUSTDOC_INTEGRATION.md  ISSUE_28_CODE_QUALITY.md  ISSUE_30_EXTERNAL_URL_TRACKING.md  ISSUE_31_WATCH_SERVICE_ASSET_INTEGRATION.md  ISSUE_32_SCHEMA_REGISTRY_PRODUCTION.md  ISSUE_33_WEIGHT_DOC_PATHS.md  ISSUE_34_CACHE_INSTABILITY.md  ISSUE_35_CACHE_INVALIDATION.md  ISSUE_36_SECTION_BID_MIGRATION.md  ISSUE_38_INTERACTIVE_SPA.md  ISSUE_39_ADVANCED_INTERACTIVE.md  ISSUE_40_NETWORK_INDEX_DOCCODEC.md  ISSUE_41_QUERY_BUILDER.md  ISSUE_41_STREAM_EVENTS_TO_SPA.md  (+17 more)
docs/project/.scratchpad/: 2025-01-23-session-notes.md
docs/project/completed/: ISSUE_01_SCHEMA_REGISTRY.md  ISSUE_02_MULTINODE_TOML_PARSING.md  ISSUE_03_HEADING_ANCHORS.md  ISSUE_04_LINK_MANIPULATION.md  ISSUE_05_DOCUMENTATION.md  ISSUE_06_HTML_GENERATION.md  ISSUE_10_DAEMON_TESTING.md  ISSUE_14_NAMING_IMPROVEMENTS.md  ISSUE_20_CLI_WRITE_BACK.md  ISSUE_21_JSON_FALLBACK_PARSING.md  ISSUE_22_DUPLICATE_NODE_DEDUPLICATION.md  ISSUE_23_INTEGRATION_TEST_CONVERGENCE.md  ISSUE_24_API_NODE_ARCHITECTURE.md  ISSUE_29_STATIC_ASSET_TRACKING.md  ISSUE_33_WEIGHT_DOC_PATHS.md  ISSUE_34_CACHE_INSTABILITY.md  ISSUE_35_CACHE_INVALIDATION.md  ISSUE_37_HEADING_ANCHOR_BUGS.md  ISSUE_38_INTERACTIVE_SPA.md  ISSUE_40_NETWORK_INDEX_DOCCODEC.md  ISSUE_43_CODEC_HTML_REFACTOR.md  ISSUE_44_UI_CLEANUP.md  ISSUE_45_wasm_threading_fix.md  ISSUE_48_CONSOLIDATE_PATH_MANIPULATION.md  ISSUE_51_AUTHOR_DIAGNOSTICS.md  ISSUE_52_NETWORK_INDEX_CONTENT_MERGE.md  ISSUE_53_CACHE_INVALIDATION_TEST_SYNC.md
docs/project/trades/: TEXT_SEARCH_INDEXER.md  THEME_COMPATIBILITY.md  TRADE_51_DIAGNOSTIC_COLLECTION.md  TRADE_52_DYNAMIC_CONTENT_PLACEMENT.md  TRADE_55_MYST_DIRECTIVE_SYNTAX.md
examples/: basic_usage.rs  watch_service.rs
scripts/: build-full.sh
src/: beliefbase.rs  beliefset.rs  commands.rs  compiler.rs  config.rs  db.rs  error.rs  event.rs  lib.rs  nodekey.rs  paths.rs  properties.rs  query.rs  wasm.rs  watch.rs
src/beliefbase/: base.rs  cached.rs  context.rs  graph.rs  mod.rs  sink.rs  tests.rs
src/codec/: accumulator.rs  assets.rs  belief_ir.rs  builder.rs  compiler.rs  diagnostic.rs  lattice_toml.rs  md.rs  mod.rs  network.rs  parser.rs  proto_index.rs  schema_registry.rs
src/paths/: mod.rs  path.rs  pathmap.rs
src/shard/: export.rs  manifest.rs  mod.rs  search.rs  wire.rs
src/tests/: expression.rs  helpers.rs  mod.rs  paths.rs
tests/: belief_source_test.rs  cache_invalidation_test.rs  codec_test.rs  schema_migration_test.rs  service_integration.rs
tests/browser/: README.md  run.sh  test-validation.html  test_related_nodes.js  test_runner.html
tests/codec_test/: anchor_tests.rs  asset_tests.rs  bid_tests.rs  common.rs  link_tests.rs  section_tests.rs
tests/common/: mod.rs
tests/network_1/: BeliefNetwork.toml  anchors_collision_test.md  anchors_explicit_test.md  anchors_normalization_test.md  asset_tracking_test.md  cross_doc_notation.md  cross_doc_tokens.md  file1.md  index.md  link_manipulation_test.md  repeating_references.md  sections_test.md
tests/network_1/net1_dir1/: hsml.md  (+2 more)
(+3 files in other folders)
