[package]
name = "noet-core"
version = "0.0.0"
authors = ["Andrew Lyjak"]
description = "A hypergraph-based knowledge management system with three-way synchronization between documents, cache, and database"
documentation = "https://docs.rs/noet-core"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/buildonomy/noet"
edition = "2021"
rust-version = "1.85"
readme = "README.md"
keywords = ["knowledge-management", "hypergraph", "markdown", "sync", "graph"]
categories = ["data-structures", "parsing", "database"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
enumset = { version = "1.1.5", features = ["serde"] }
futures-core = { version = "0.3.30", optional = true }
http = { version = "1.1.0" }
log = "0.4"
notify = { version = "6.1.1", optional = true }
notify-debouncer-full = { version = "0.3.1", default-features = false, optional = true }
once_cell = "1.21.3"
path-clean = "1.0.1"
orgize = "0.10.0-alpha"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
petgraph = { version = "0.6.5", features = ["serde-1"] }
pulldown-cmark = { version = "0.13.0" }
pulldown-cmark-to-cmark = { git = "https://github.com/alyjak/pulldown-cmark-to-cmark.git", branch = "upgrade_to_cmark_v0.13" }
reactive_stores = { version = "0.1.0" }
regex = "1.10.5"
serde_json = { version = "1.0.117", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "sqlite",
    "regexp",
    "runtime-tokio",
    "json",
    "time",
    "uuid",
    "time",
], optional = true }
thiserror = "1.0.63"
tokio = { version = "1.40", features = ["fs", "sync", "time", "rt", "macros"] }
toml = "0.8.12"
toml_edit = "0.22"
tracing = "0.1.40"
uniffi = { version = "0.29", features = ["cli", "tokio"] }
url = "2.5"
uuid = { version = "1.16", features = ["serde", "std", "rng", "v5", "v6"] }
walkdir = "2.5"

[dev-dependencies]
async-trait = "0.1.77"
serde_json = "1.0.117"
tempfile = "3.19"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1.40", features = ["fs"] }
tracing-subscriber = "0.3.20"
trybuild = "1.0"

[features]
default = []
service = ["notify", "serde_json", "sqlx", "dep:notify-debouncer-full", "dep:futures-core"]
wasm = ["serde-wasm-bindgen", "uuid/js"]
