[package]
name = "noet-core"
version = "0.0.0"
authors = ["Andrew Lyjak"]
description = "A hypergraph-based knowledge management system with three-way synchronization between documents, cache, and database"
documentation = "https://docs.rs/noet-core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/buildonomy/noet-core"
edition = "2021"
rust-version = "1.85"
readme = "README.md"
keywords = ["knowledge-management", "hypergraph", "markdown", "sync", "graph"]
categories = ["data-structures", "parsing", "database"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disabled: wasm-opt v108 fails with "Only 1 table definition allowed in MVP"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.features]
default-features = false
features = ["wasm"]

[package.metadata.wasm-pack.profile.release.features]
default-features = false
features = ["wasm"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
axum = { version = "0.7", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
ctrlc = { version = "3.4", optional = true }
enumset = { version = "1.1", features = ["serde"] }
futures = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", features = ["serde", "std"] }
http = { version = "1.1.0" }
include_dir = "0.7"
log = "0.4"
notify = { version = "6.1.1", optional = true }
notify-debouncer-full = { version = "0.3.1", default-features = false, optional = true }
once_cell = "1.21.3"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
petgraph = { version = "0.6.5", features = ["serde-1"] }
pulldown-cmark = { version = "0.13.0" }
pulldown-cmark-to-cmark = { version = "22" }
reactive_stores = { version = "0.1" }
regex = "1.10.5"
serde_json = "1.0.117"
serde_yaml = "0.9"
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "regexp",
    "runtime-tokio",
    "json",
    "time",
    "uuid",
    "macros",
    "migrate",
], optional = true }
thiserror = "1.0.63"
tokio = { version = "1.40", default-features = false, features = ["sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
toml = "0.8.12"
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
toml_edit = "0.22"
tracing = "0.1.40"
uniffi = { version = "0.29", features = ["cli", "tokio"] }
url = "2.5"
uuid = { version = "1.16", features = ["serde", "std", "rng", "v5", "v6", "js"] }
walkdir = "2.5"

[dev-dependencies]
async-trait = "0.1.77"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
serde_json = "1.0.117"
tempfile = "3.19"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = "0.3.20"
trybuild = "1.0"

[features]
default = []
bin = ["clap", "ctrlc", "tracing-subscriber"]
service = ["notify", "sqlx", "dep:notify-debouncer-full", "dep:futures-core", "axum", "tokio-stream", "tower", "tower-http"]
wasm = ["serde-wasm-bindgen", "wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "uuid/js", "futures"]

# WARNING: Do NOT use --all-features!
# The 'wasm' and 'service' features are mutually exclusive:
# - 'wasm' is for browser WASM (no filesystem, no native I/O)
# - 'service' includes sqlx, tokio runtime, file watching (requires native platform)
#
# Valid build commands:
#   cargo build                         # Library only (no features)
#   cargo build --features service      # Library with service features
#   cargo build --features bin          # CLI with WASM (requires pre-built WASM artifacts)
#   cargo build --features "bin service" # CLI with daemon/watching features
#   ./scripts/build-full.sh             # Proper two-phase build for full binary
#   cargo test --features service       # Run tests
#
# Invalid:
#   cargo build --all-features  # ❌ Combines incompatible features

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40", features = ["fs", "time", "rt", "rt-multi-thread"] }

[[bin]]
name = "noet"
required-features = ["bin"]

[[bench]]
name = "document_processing"
harness = false
required-features = ["service"]
